--- a/index.html
+++ b/index.html
@@ -19,6 +19,59 @@
                 <button>Contact Us</button>
             </div>
         </div>
+
+        <!-- Failures section start from here  -->
+
+        <div class="failure-container">
+            <div class="box1">
+                <img src="images/person.png" alt="person">
+            </div>
+            <div class="box2">
+                <h1>My failures of <br> previous year</h1>
+                <p>Contrary to popular belief, Lorem Ipsum is not <br> simply random text. It has roots in a piece of <br>  classical Latin  literature from 45 BC, making it over <br> 2000 years old. Richard McClintock.</p>
+
+                <ul>
+                    <li>Contrary to popular belief, is not simply.</li>
+                    <li>Contrary to popular belief.</li>
+                    <li>Contrary to popular , is not simply.</li>
+                    <li>Contrary to popular belief, is not simply.</li>
+                    <li>Contrary to popular simply.</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="plan-container">
+            <div class="plan-heading">
+                <h1>My Plans</h1>
+            </div>
+            <div class="plan-content">
+                <div class="planbox">
+                    <img src="images/icons/web.png" alt="web">
+                    <h1>Web Development</h1>
+                    <p>I want to start</p>
+                </div>
+                <div class="planbox">
+                    <img src="images/icons/js.png" alt="javascript">
+                    <h1>Javascript</h1>
+                    <p>I want to start</p>
+                </div>
+                <div class="planbox">
+                    <img src="images/icons/smoke.png" alt="smoke">
+                    <h1>Smoking Habit</h1>
+                    <p>I want to start</p>
+                </div>
+                <div class="planbox">
+                    <img src="images/icons/ecom.png" alt="ecommerce">
+                    <h1>ecommerce</h1>
+                    <p>I want to start</p>
+                </div>
+                
+            </div>
+        </div>
+
+        <!-- Call to action section start from here -->
+
+        
     </main>
 
     <footer>
